Semi-finished Project

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         <activity android:name=".AddNewPerson">
 
         </activity>
+        <activity android:name=".ListOfPersons">
+
+        </activity>
+        <activity android:name=".ShowPerson">
+
+        </activity>
+
     </application>
 
 </manifest>
